Sat Feb 10 02:46:27 1996  Mark Eichin  <eichin@cygnus.com>

	* main.c (initialize_realms): look for [kdc] profile=path for
	default alternate kdc profile (environment variable still
	overrides it.)

Wed Feb 21 23:28:33 1996  Richard Basch  <basch@lehman.com>

	* kerberos_v4.c: Improve checking of DES keys

	* main.c: Do not assume the master key is DES; instead initialize
		the V4 random key generator from a random key after the
		DES_CBC_CRC generator has been initialized.

Tue Feb 20 16:50:59 1996  Theodore Y. Ts'o  <tytso@dcl>

	* kerberos_v4.c (kerberos_v4): Use strong random number generator

	* main.c (main): Initialize Kerberos V4's random number generator.

Sat Jan 27 00:53:41 1996  Mark Eichin  <eichin@cygnus.com>

	* network.c (setup_network): strtol is good enough for port
	number, and sunos doesn't have strtoul (and nothing else in the
	tree uses it.)
	(add_port): use proper old-style definition.
	
Wed Dec 13 03:51:53 1995  Chris Provenzano (proven@mit.edu)

        * kerberos_v4.c : Remove mkvno for krb5_db_entry

Tue Dec 12 01:10:34 1995  Chris Provenzano (proven@mit.edu)

	* extern.h: Added a krb5_keytab to the realm context. The keytab
		should be associated with a krb5_db_context which will
		make having a krb5_context unnecessary in the realm context.
	* kdc_util.c kdc_process_tgs_req(): Use the realm keytab instead
		of faking up a user-to-user key to pass to krb5_rd_req_decode().
	* main.c: Added code to use the new database keytab routines.

Mon Dec 11 16:58:31 1995  Chris Provenzano (proven@mit.edu)

	* kdc_preauth.c return_padata(): Initialize local variable "size" 
		to 0 before using it.

Thu Nov 30 20:57:11 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* kdc_preauth.c: #@&^(!! Ultrix cc sucks.  Typedef to function
		pointer rather than function prototype to avoid lossage.

Wed Nov 29 13:31:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* do_tgs_req.c (process_tgs_req): Removed extra eblock argument
		from call to krb5_encode_kdc_rep.
